dev: now we have a functionality to download zip file via sdk.
