# src/neurolinker_sdk/_generated/models/__init__.py
@@ -25,6 +25,8 @@ from neurolinker_sdk._generated.models.job import Job
 from neurolinker_sdk._generated.models.job_performance import JobPerformance
 from neurolinker_sdk._generated.models.job_submission import JobSubmission
 from neurolinker_sdk._generated.models.location_inner import LocationInner
+from neurolinker_sdk._generated.models.make_zip_request import MakeZipRequest
+from neurolinker_sdk._generated.models.make_zip_response import MakeZipResponse
 from neurolinker_sdk._generated.models.process_pdfs_response import ProcessPDFsResponse
 from neurolinker_sdk._generated.models.request_status_response import RequestStatusResponse
 from neurolinker_sdk._generated.models.tasks_response import TasksResponse
